--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginLeft="16dp">
     <TextView
         android:id="@+id/title_label"
+        android:textSize="17sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/name_label"
         android:labelFor="@+id/task_title"
@@ -15,8 +16,7 @@
     <EditText
         android:id="@+id/task_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp" />
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,6 +37,7 @@
             android:text="@string/time"/>
     </LinearLayout>
     <Button
+
         android:id="@+id/repeat_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,6 +48,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/location"/>
+    <TextView
+        android:textSize="19sp"
+        android:text="@string/reminders"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/reminder_list_view"
         android:layout_width="match_parent"
