--- a/app/src/main/res/layout/list_reminder.xml
+++ b/app/src/main/res/layout/list_reminder.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="30dp">
     <TextView
+        android:textColor="@color/black"
         android:id="@+id/text_reminder_info"
-        android:textSize="19sp"
+        android:textSize="17sp"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_weight="5"/>
+        android:layout_height="30dp"
+        android:layout_weight="8"/>
     <ImageView
         android:id="@+id/image_delete_reminder"
         android:src="@drawable/ic_close_black_24dp"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_weight="1"/>
 </LinearLayout>
