Alarm works better with tablet goes to Overview Activity not Task Activity. And icon is added to reminder to distinguish if it is alarm or notification.
TaskLab can be saved now.

--- a/app/src/main/res/layout/list_reminder.xml
+++ b/app/src/main/res/layout/list_reminder.xml
@@ -9,7 +9,13 @@
         android:textSize="17sp"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:layout_weight="8"/>
+        android:layout_weight="7"/>
+    <ImageView
+        android:id="@+id/image_is_alarm"
+        android:src="@drawable/ic_alarm"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_weight="1"/>
     <ImageView
         android:id="@+id/image_delete_reminder"
         android:src="@drawable/ic_close_black_24dp"
