Reminders now have icon if notification. All reminders are silent alarms. Create a Reminder Dialog box has better text. Tasklab will clean up un-named tasked onDestory.

--- a/app/src/main/res/layout/dialog_reminder.xml
+++ b/app/src/main/res/layout/dialog_reminder.xml
@@ -2,7 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <EditText
         android:id="@+id/amount_time_text"
         android:layout_width="0dp"
@@ -16,4 +20,19 @@
         android:layout_height="100dp"
         android:layout_weight="1">
     </Spinner>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"/>
+        <Switch
+            android:id="@+id/reminder_warning_type_switch"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </LinearLayout>
