Repeat added. Task id is now an int using Atomic Integer. Reminder uses int so that duplicates will not happen with a hash. Added Dialog for Repeat.

--- a/app/src/main/res/layout/dialog_reminder.xml
+++ b/app/src/main/res/layout/dialog_reminder.xml
@@ -28,6 +28,13 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="4"/>
+        <TextView
+            android:textColor="@color/black"
+            android:id="@+id/reminder_warning_text"
+            android:textSize="18sp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="3"/>
         <Switch
             android:id="@+id/reminder_warning_type_switch"
