--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -15,6 +15,8 @@
         />
     <EditText
         android:id="@+id/task_title"
+        android:singleLine="true"
+        android:inputType="textShortMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
