Dialogs close when touch out side of them. Most Dialogs extend DismissDialog to do this. Alarms hold names so that they are more consistent.

--- a/app/src/main/res/layout/dialog_reminder.xml
+++ b/app/src/main/res/layout/dialog_reminder.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
     <EditText
-        android:id="@+id/amount_time_text"
+        android:id="@+id/reminder_time_text"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_weight="1"
@@ -31,7 +31,7 @@
             android:layout_weight="4"/>
         <TextView
             android:textColor="@color/black"
-            android:id="@+id/reminder_warning_text"
+            android:id="@+id/reminder_warning_type_text"
             android:textSize="18sp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
