--- a/app/src/main/res/layout/dialog_repeat.xml
+++ b/app/src/main/res/layout/dialog_repeat.xml
@@ -1,25 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginStart="10dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <EditText
-        android:id="@+id/repeat_time_text"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        android:inputType="number"
-        android:gravity="end"/>
-    <Spinner
-        android:id="@+id/repeat_time_spinner"
-        android:layout_width="0dp"
-
-        android:layout_height="100dp"
-        android:layout_weight="1">
-    </Spinner>
+        <EditText
+            android:id="@+id/repeat_time_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="number"
+            android:gravity="end"/>
+        <Spinner
+            android:id="@+id/repeat_time_spinner"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            >
+        </Spinner>
     </LinearLayout>
+    <TextView
+        android:id="@+id/more_often_option"
+        android:textColor="@color/black"
+        android:text="@string/more_often"
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:id="@+id/more_often_group"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <Button
+        android:id="@+id/add_repeat_time_button"
+        android:text="@string/add_repeat_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/time_repeat_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
+    </LinearLayout>
+    <GridView
+        android:id="@+id/day_buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="auto_fit"
+        android:horizontalSpacing="0dp"
+        android:columnWidth="66dp"
+        >
+    </GridView>
 </LinearLayout>
