--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
     <color name="gray">#777777</color>
+    <color name="lightGray">#AAAAAA</color>
+    <color name="red">#FF0000</color>
+    <color name="lightBlue">#3BB9FF</color>
 </resources>
