--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="lightGray">#AAAAAA</color>
     <color name="red">#FF0000</color>
     <color name="lightBlue">#3BB9FF</color>
+    <color name="white">#FFFFFF</color>
 </resources>
