--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -1,7 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+android:orientation="vertical"
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/snooze_time_text"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--<TextView
+        android:text="@string/set_snooze"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        android:layout_marginLeft="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />-->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <HorizontalScrollView
+            android:id="@+id/snooze_scrollview"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3">
 
+            <LinearLayout
+                android:id="@+id/snooze_buttons"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button style="@style/SquareButton" />
+                    <Button
+                        style="@style/SquareButton"
+                         />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        style="@style/SquareButton"
+                         />
+                    <Button
+                        style="@style/SquareButton"
+                         />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        style="@style/SquareButton"
+                         />
+                    <Button
+                        style="@style/SquareButton"
+                         />
+                </LinearLayout>
+                <View
+                    android:layout_width="3dp"
+                    android:layout_height="fill_parent"
+                    android:background="@android:color/holo_blue_light" />
+                <LinearLayout
+                    android:layout_margin="2dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        style="@style/SquareButton"
+                         />
+                    <Button
+                        style="@style/SquareButton"
+                         />
+                </LinearLayout>
+                <LinearLayout
+                android:layout_margin="2dp"
+                    android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    style="@style/SquareButton"
+                     />
+                <Button
+                    style="@style/SquareButton"
+                     />
+                </LinearLayout>
+                <LinearLayout
+                android:layout_margin="2dp"
+                    android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    style="@style/SquareButton"
+                     />
+                <Button
+                    style="@style/SquareButton"
+                     />
+            </LinearLayout>
+            </LinearLayout>
+        </HorizontalScrollView>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <Button
+                android:layout_gravity="center_horizontal"
+                android:text="@string/reset"
+                android:textSize="18sp"
+                style="@style/SquareButton2"/>
+            <Button
+                android:layout_gravity="center_horizontal"
+                style="@style/SquareButton2"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
