--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,25 +8,40 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="WeekButtonOn"
+    <style name="CircleButtonOn"
         parent="android:style/Widget.Holo.Button">
-        <item name="android:background">@drawable/ic_button_repeat_circle_on</item>
+        <item name="android:background">@drawable/ic_button_circle_on</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    <style name="WeekButtonOff"
+    <style name="CircleButtonOff"
         parent="android:style/Widget.Holo.Button">
-        <item name="android:background">@drawable/ic_button_repeat_circle_off</item>
+        <item name="android:background">@drawable/ic_button_circle_off</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="Theme.AppCompat.Translucent" parent="AppTheme">
+        <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
+    </style>
+
+    <style name="SquareButton"
+        parent="android:style/Widget.Holo.Button">
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:background">@drawable/ic_button_square</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_width">80dp</item>
+    </style>
+    <style name="SquareButton2"
+        parent="android:style/Widget.Holo.Button">
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:background">@drawable/ic_button_square2</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_width">80dp</item>
     </style>
 
 </resources>
