--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -6,8 +6,17 @@ android:layout_width="match_parent"
 android:layout_height="wrap_content">
     <TextView
         android:id="@+id/snooze_time_text"
+        android:gravity="center_horizontal"
+        android:text="@string/time_default"
         android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textSize="80sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/snooze_time_text_2"
+        android:gravity="center_horizontal"
+        android:textColor="@color/black"
+        android:textSize="25sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <!--<TextView
@@ -22,6 +31,7 @@ android:layout_height="wrap_content">
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <HorizontalScrollView
+            android:scrollbars="none"
             android:id="@+id/snooze_scrollview"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -69,17 +79,17 @@ android:layout_height="wrap_content">
                 <View
                     android:layout_width="3dp"
                     android:layout_height="fill_parent"
-                    android:background="@android:color/holo_blue_light" />
+                    android:background="@color/mixedBlue" />
                 <LinearLayout
                     android:layout_margin="2dp"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <Button
-                        style="@style/SquareButton"
+                        style="@style/SquareButton2"
                          />
                     <Button
-                        style="@style/SquareButton"
+                        style="@style/SquareButton2"
                          />
                 </LinearLayout>
                 <LinearLayout
@@ -88,10 +98,10 @@ android:layout_height="wrap_content">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
-                    style="@style/SquareButton"
+                    style="@style/SquareButton2"
                      />
                 <Button
-                    style="@style/SquareButton"
+                    style="@style/SquareButton2"
                      />
                 </LinearLayout>
                 <LinearLayout
@@ -100,10 +110,10 @@ android:layout_height="wrap_content">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
-                    style="@style/SquareButton"
+                    style="@style/SquareButton2"
                      />
                 <Button
-                    style="@style/SquareButton"
+                    style="@style/SquareButton2"
                      />
             </LinearLayout>
             </LinearLayout>
@@ -113,14 +123,17 @@ android:layout_height="wrap_content">
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent">
-            <Button
+            <ImageButton
+                android:id="@+id/undo_button"
+                android:src="@drawable/ic_undo"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/reset"
                 android:textSize="18sp"
-                style="@style/SquareButton2"/>
-            <Button
+                style="@style/SquareButton3"/>
+            <ImageButton
+                android:id="@+id/reset_button"
+                android:src="@drawable/ic_reset"
                 android:layout_gravity="center_horizontal"
-                style="@style/SquareButton2"/>
+                style="@style/SquareButton3"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
