--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,5 +43,13 @@
         <item name="android:layout_height">80dp</item>
         <item name="android:layout_width">80dp</item>
     </style>
+    <style name="SquareButton3"
+        parent="android:style/Widget.Holo.Button">
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:background">@drawable/ic_button_square3</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_width">80dp</item>
+    </style>
 
 </resources>
