Snooze works pretty well. One alarm per task. Snooze can be edited anytime after the due date. Dialog Fragments are renamed.

--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -135,5 +135,23 @@ android:layout_height="wrap_content">
                 android:layout_gravity="center_horizontal"
                 style="@style/SquareButton3"/>
         </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/alarm_snooze_button"
+            android:text="@string/snooze"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/alarm_dismiss_button"
+            android:text="@string/dismiss"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
