--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -68,4 +68,9 @@
         android:text="@string/test_alarm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/snooze_button"
+        android:text="@string/snooze"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
