Added partial repeat support. Making some changes adding start day and refactoring SpanOfTime as well as Repeat.

--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -149,7 +149,7 @@ android:layout_height="wrap_content">
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/alarm_dismiss_button"
-            android:text="@string/dismiss"
+            android:text="@string/complete"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
