Refactored Overview to TaskList(in preparation for the card overview). Improved TaskList Fragment(FKA Overview Fragment).

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="lightBlue">#3BB9FF</color>
     <color name="mixedBlue">#1E83BF</color>
     <color name="blue">#004d80</color>
+    <color name="green">#33FF00</color>
 </resources>
