--- a/app/src/main/res/layout/dialog_repeat.xml
+++ b/app/src/main/res/layout/dialog_repeat.xml
@@ -55,4 +55,9 @@
         android:columnWidth="66dp"
         >
     </GridView>
+    <Button
+        android:id="@+id/remove_repeat_button"
+        android:text="@string/remove_repeat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
