--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -1,42 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/lightBlue"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/group_name"
+    android:layout_margin="8dp">
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="Every Day"
-        android:textColor="@android:color/black"
-        android:textSize="40sp"
-        tools:ignore="HardcodedText" />
-    <TextView
-        android:id="@+id/num_task_due"
+        android:layout_height="300dp"
+        >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
-        android:text="10 Due Today"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
-    <TextView
-        android:id="@+id/num_task_overdue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
-        android:text="2 Overdue"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        style="@style/Card"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/group_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:text="Urgent"
+            android:textColor="@android:color/black"
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
+        <TextView
+            android:id="@+id/num_task_due"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="40dp"
+            android:text="Due Today: 10"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            tools:ignore="HardcodedText" />
+        <TextView
+            android:id="@+id/num_task_overdue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="0dp"
+            android:text="Overdue: 2"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+    <ImageButton
+        android:id="@+id/edit_group_button"
+        android:background="#00000000"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    </FrameLayout>
+</FrameLayout>
