--- a/app/src/main/res/layout/dialog_color_chooser.xml
+++ b/app/src/main/res/layout/dialog_color_chooser.xml
@@ -5,14 +5,6 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/snooze_time_text"
-        android:gravity="center_horizontal"
-        android:text="@string/time_default"
-        android:textColor="@color/black"
-        android:textSize="80sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
         android:id="@+id/snooze_time_text_2"
         android:gravity="center_horizontal"
         android:textColor="@color/black"
@@ -47,9 +39,9 @@ android:layout_height="wrap_content">
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <Button style="@style/SquareButton" />
+                    <Button style="@style/SquareButtonColor" />
                     <Button
-                        style="@style/SquareButton"
+                        style="@style/SquareButtonColor"
                          />
                 </LinearLayout>
                 <LinearLayout
@@ -58,10 +50,10 @@ android:layout_height="wrap_content">
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <Button
-                        style="@style/SquareButton"
+                        style="@style/SquareButtonColor"
                          />
                     <Button
-                        style="@style/SquareButton"
+                        style="@style/SquareButtonColor"
                          />
                 </LinearLayout>
                 <LinearLayout
@@ -70,26 +62,22 @@ android:layout_height="wrap_content">
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <Button
-                        style="@style/SquareButton"
+                        style="@style/SquareButtonColor"
                          />
                     <Button
-                        style="@style/SquareButton"
+                        style="@style/SquareButtonColor"
                          />
                 </LinearLayout>
-                <View
-                    android:layout_width="3dp"
-                    android:layout_height="fill_parent"
-                    android:background="@color/mixedBlue" />
                 <LinearLayout
                     android:layout_margin="2dp"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <Button
-                        style="@style/SquareButton2"
+                        style="@style/SquareButtonColor"
                          />
                     <Button
-                        style="@style/SquareButton2"
+                        style="@style/SquareButtonColor"
                          />
                 </LinearLayout>
                 <LinearLayout
@@ -98,10 +86,10 @@ android:layout_height="wrap_content">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
-                    style="@style/SquareButton2"
+                    style="@style/SquareButtonColor"
                      />
                 <Button
-                    style="@style/SquareButton2"
+                    style="@style/SquareButtonColor"
                      />
                 </LinearLayout>
                 <LinearLayout
@@ -110,46 +98,28 @@ android:layout_height="wrap_content">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
-                    style="@style/SquareButton2"
+                    style="@style/SquareButtonColor"
                      />
                 <Button
-                    style="@style/SquareButton2"
+                    style="@style/SquareButtonColor"
                      />
             </LinearLayout>
             </LinearLayout>
         </HorizontalScrollView>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-            <ImageButton
-                android:id="@+id/undo_button"
-                android:src="@drawable/ic_undo"
-                android:layout_gravity="center_horizontal"
-                android:textSize="18sp"
-                style="@style/SquareButton3"/>
-            <ImageButton
-                android:id="@+id/reset_button"
-                android:src="@drawable/ic_reset"
-                android:layout_gravity="center_horizontal"
-                style="@style/SquareButton3"/>
-        </LinearLayout>
-
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
-            android:id="@+id/alarm_snooze_button"
-            android:text="@string/snooze"
+            android:id="@+id/cancel_dialog_button"
+            android:text="@string/cancel"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <Button
-            android:id="@+id/alarm_dismiss_button"
-            android:text="@string/complete"
+            android:id="@+id/change_color_button"
+            android:text="@string/change_color"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
