--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,5 +55,14 @@
         <item name="android:layout_height">80dp</item>
         <item name="android:layout_width">80dp</item>
     </style>
+    <style name="SquareButtonColor"
+        parent="android:style/Widget.Holo.Button">
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:background">@drawable/ic_button_square_color</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_width">80dp</item>
+    </style>
+
 
 </resources>
