--- a/app/src/main/res/drawable-hdpi/ic_button_square_color_on.xml
+++ b/app/src/main/res/drawable-hdpi/ic_button_square_color_on.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:shape="rectangle">
+    <solid
+        android:color="@color/white"/>
     <!--
     <gradient
         android:centerY="90"
@@ -13,7 +14,7 @@
     <corners
         android:radius="4dp"/>
     <stroke
-        android:color="@color/black"
+        android:color="@color/lightGray"
         android:width="5dp"
         />
 </shape>
