--- a/app/src/main/res/drawable/ic_card_normal.xml
+++ b/app/src/main/res/drawable/ic_card_normal.xml
@@ -2,6 +2,6 @@
     android:shape="rectangle">
     <corners android:radius="30dp"/>
     <solid
-        android:color="@color/lightBlue" />
+        android:color="@color/white" />
 
 </shape>
