--- a/app/src/main/res/drawable/ic_card_pressed.xml
+++ b/app/src/main/res/drawable/ic_card_pressed.xml
@@ -2,6 +2,6 @@
     android:shape="rectangle">
     <corners android:radius="30dp"/>
     <solid
-        android:color="@color/blue" />
+        android:color="@color/gray" />
 
 </shape>
