--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -10,6 +10,7 @@
         android:layout_height="300dp"
         >
     <LinearLayout
+        android:id="@+id/card_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/Card"
