--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -5,9 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground"
     android:layout_margin="8dp">
     <FrameLayout
         android:layout_width="match_parent"
@@ -15,6 +12,8 @@
         >
     <LinearLayout
         android:id="@+id/card_layout"
+        android:clickable="false"
+        android:focusable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/Card"
