Add task button can be dragged. Trash can works. Animation needs work.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="mixedBlue">#1E83BF</color>
     <color name="blue">#004d80</color>
     <color name="green">#33FF00</color>
+    <color name="darkGray">#ff444444</color>
 </resources>
