--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -6,7 +6,7 @@
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
             android:text="Task Groups"
@@ -23,6 +23,16 @@
     <ImageButton
         android:id="@+id/trashcan_circle"
         android:src="@drawable/ic_delete"
+        android:scaleX="1.25"
+        android:scaleY="1.25"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="end|bottom"
+        android:background="@drawable/ic_image_circle"
+        android:layout_margin="30dp"/>
+    <ImageButton
+        android:id="@+id/add_task_circle"
+        android:src="@drawable/ic_add"
         android:scaleX="1.25"
         android:scaleY="1.25"
         android:layout_width="70dp"
