--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="lightBlue">#3BB9FF</color>
     <color name="mixedBlue">#1E83BF</color>
     <color name="blue">#004d80</color>
-    <color name="green">#33FF00</color>
+    <color name="green">#008000</color>
     <color name="darkGray">#ff444444</color>
 </resources>
