--- a/app/src/main/res/drawable/ic_card_new.xml
+++ b/app/src/main/res/drawable/ic_card_new.xml
@@ -1,13 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="30dp"/>
-    <solid
-        android:color="@color/white" />
+    <solid/>
     <stroke
         android:color="@color/black"
         android:dashWidth="30dp"
         android:dashGap="30dp"
-        android:width="4dp"
+        android:width="1dp"
         />
 
 </shape>
