--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -56,9 +56,9 @@
         android:id="@+id/edit_group_button"
         android:background="#00000000"
         android:layout_gravity="end|bottom"
-        android:layout_margin="20dp"
+        android:layout_margin="0dp"
         android:src="@drawable/ic_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
     </FrameLayout>
 </FrameLayout>
