--- a/app/src/main/res/menu/fragment_group.xml
+++ b/app/src/main/res/menu/fragment_group.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/save_task"
+        android:id="@+id/save_group"
         android:title="@string/save"
         app:showAsAction="ifRoom|withText"/>
 
