Group Fragment works a lot better.

--- a/app/src/main/res/layout/list_reminder_footer.xml
+++ b/app/src/main/res/layout/list_reminder_footer.xml
@@ -9,6 +9,6 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_width="match_parent"
-        android:gravity="center_vertical"
+        android:gravity="bottom"
         android:layout_height="50dp"/>
 </LinearLayout>
