--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -37,48 +37,26 @@
                 android:layout_gravity="center"/>
         </FrameLayout>
     </LinearLayout>
-    <LinearLayout
+    <Button
+        android:id="@+id/time_button"
+        android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/time_button"
-            android:textSize="25sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="@string/default_time"/>
-        <ImageButton
-            android:id="@+id/clear_time_button"
-            android:background="#00000000"
-            android:src="@drawable/ic_close_black_24dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    <LinearLayout
+        android:text="@string/set_default_time"/>
+    <Button
+        android:id="@+id/repeat_button"
+        android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/repeat_button"
-            android:textSize="25sp"
-            android:layout_weight="3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/default_repeat" />
-        <ImageButton
-            android:id="@+id/clear_repeat_button"
-            android:background="#00000000"
-            android:src="@drawable/ic_close_black_24dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"/>
-    </LinearLayout>
+        android:text="@string/set_default_repeat" />
+    <Button
+        android:textSize="22sp"
+        android:id="@+id/snooze_button"
+        android:text="@string/set_default_snooze"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <TextView
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:text="@string/reminders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -87,10 +65,4 @@
         android:layout_width="match_parent"
         android:layout_height="200dp">
     </ListView>
-    <Button
-        android:id="@+id/snooze_button"
-        android:text="@string/default_snooze"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
 </LinearLayout>
