--- a/app/src/main/res/layout/dialog_repeat.xml
+++ b/app/src/main/res/layout/dialog_repeat.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginStart="10dp">
+    android:padding="16dp"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,6 +24,7 @@
         </Spinner>
     </LinearLayout>
     <TextView
+        style="?android:attr/buttonBarStyle"
         android:id="@+id/more_often_option"
         android:textColor="@color/black"
         android:text="@string/more_often"
