--- a/app/src/main/res/layout/list_time_repeat.xml
+++ b/app/src/main/res/layout/list_time_repeat.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="30dp">
     <TextView
+        android:text="8:00 PM"
         android:textColor="@color/black"
         android:id="@+id/text_time_repeat"
-        android:textSize="17sp"
+        android:textSize="20sp"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:layout_weight="7"/>
+        android:layout_weight="7"
+        tools:ignore="HardcodedText" />
     <ImageView
         android:id="@+id/time_delete"
         android:src="@drawable/ic_close_black_24dp"
