--- a/app/src/main/res/layout/dialog_repeat.xml
+++ b/app/src/main/res/layout/dialog_repeat.xml
@@ -34,8 +34,8 @@
         android:textColor="@color/black"
         android:text="@string/more_often"
         android:textSize="20sp"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"/>
 
     <ListView
         android:id="@+id/more_often_repeat_list"
