--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -47,36 +47,53 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-    <TextView
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold"
+    <LinearLayout
+        android:id="@+id/time_section"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:text="@string/default_time"/>
+        android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/time_button"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:text="@string/default_time"/>
+        <TextView
+            android:id="@+id/time_text"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"/>
-    <TextView
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="22sp"
-        android:layout_marginTop="7dp"
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/repeat_section"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/default_repeat" />
+        android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/repeat_button"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:layout_marginTop="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/default_repeat" />
+        <TextView
+            android:id="@+id/set_repeat_text"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/snooze_section"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <TextView
             android:textColor="@color/black"
             android:text="@string/default_snooze"
@@ -86,12 +103,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/snooze_button"
+            android:id="@+id/quick_snooze_text"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"/>
+    </LinearLayout>
         <TextView
         android:textSize="20sp"
         android:text="@string/default_reminders"
