--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -17,13 +17,24 @@
         android:text="@string/task_name_label"
         android:labelFor="@+id/task_name"
         />
-    <EditText
-        android:id="@+id/task_name"
-        android:inputType="textCapWords"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:textSize="24sp"
-        android:layout_height="wrap_content"
-        android:imeOptions="actionDone"/>
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/task_name"
+            android:inputType="textCapWords"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:textSize="24sp"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"/>
+        <Spinner
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -42,7 +53,7 @@
                 android:textAllCaps="true"
                 android:textSize="20sp"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="8"/>
             <ImageButton
                 android:background="#00000000"
@@ -64,7 +75,7 @@
             <Button
                 style="?android:attr/buttonBarStyle"
                 android:gravity="start"
-                android:id="@+id/time_button"
+                android:id="@+id/time_text"
                 android:textSize="22sp"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -73,7 +84,7 @@
             <Button
                 style="?android:attr/buttonBarStyle"
                 android:gravity="start"
-                android:id="@+id/date_button"
+                android:id="@+id/date_text"
                 android:layout_weight="1"
                 android:textSize="22sp"
                 android:layout_width="0dp"
@@ -83,7 +94,7 @@
         <Button
             style="?android:attr/buttonBarStyle"
             android:gravity="start"
-            android:id="@+id/repeat_button"
+            android:id="@+id/set_repeat_text"
             android:textSize="22sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -106,7 +117,7 @@
         android:textAllCaps="true"
         android:layout_width="0dp"
         android:layout_weight="8"
-        android:layout_height="60dp"/>
+        android:layout_height="wrap_content"/>
         <ImageButton
             android:background="#00000000"
             android:id="@+id/close_alerts"
@@ -124,7 +135,7 @@
             style="?android:attr/buttonBarStyle"
             android:gravity="start"
             android:textSize="22sp"
-            android:id="@+id/snooze_button"
+            android:id="@+id/quick_snooze_text"
             android:text="@string/set_quick_snooze"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
