--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="blue">#004d80</color>
     <color name="green">#008000</color>
     <color name="darkGray">#ff444444</color>
+    <color name="pink">#ffffc0cb</color>
+    <color name="lightGreen">#ff00ff00</color>
 </resources>
